devops/kubernetes/resources/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: backend-tls
    - hosts:
        - host.docker.internal
      secretName: backend-tls
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 80
            path: /api/v1/
            pathType: Prefix
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: host.docker.internal
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 80
            path: /api/v1/
            pathType: Prefix
